<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:id="@+id/main"
    android:orientation="vertical"
    tools:context=".Activity.Login"
    android:background="@drawable/tuoisang1">

    <EditText
        android:id="@+id/txtlginemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:hint="@string/email_hint"
        android:textColorHint="@color/black"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/txtlginpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"

        android:text="@string/login" />

    <TextView
        android:id="@+id/txtlgin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/black"
        android:text="@string/register"
        android:onClick="onClick" />

    <TextView
        android:id="@+id/txtforgotpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/forgot_password"
        android:textColor="@color/black"

        android:onClick="onClick" />

</LinearLayout>