<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:id="@+id/main"
    android:orientation="vertical"
    tools:context=".Activity.Regis"
    android:background="@drawable/tuoisang1">

    <EditText
        android:id="@+id/txtregisemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/txtregispass"
        android:layout_width="match_parent"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

    <EditText
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:id="@+id/txtregisconfirmpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="Confirm Password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnregister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/register" />

    <TextView
        android:id="@+id/txtlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/login"
        android:textColor="@color/black"
        android:onClick="onClick" />

</LinearLayout>